# particle_collision

./: CMakeLists.txt  Dockerfile  README.md  build.sh  conanfile.txt  docker.sh
apps/: CMakeLists.txt
apps/bar_bar_ball/: CMakeLists.txt  bar_bar_ball.cpp
apps/boxed_spheres/: CMakeLists.txt  boxed_spheres.cpp
apps/empty_box/: CMakeLists.txt  empty_box.cpp
apps/t_junction/: CMakeLists.txt  t_junction.cpp
src/: CMakeLists.txt
src/geometry/: boundary_manager.cpp  boundary_manager.h  bounding_box.cpp  bounding_box.h  coordinate_transformation.cpp  coordinate_transformation.h  polygon.h  quad_tree.cpp  quad_tree.h  segment.h  triangle.h  triangle_algo.cpp  triangle_algo.h  triangle_group.cpp  triangle_group.h  triangles_manager.cpp  triangles_manager.h
src/geometry/unit_test/: CMakeLists.txt  Test_coordinate_transformation.cpp  Test_polygon.cpp  Test_quad_tree.cpp  Test_triangle_algo.cpp
src/math/: integrate.h  math_random.cpp  math_random.h  vector_math.cpp  vector_math.h
src/math/unit_test/: CMakeLists.txt  Test_integrate.cpp
src/physics/: collision.cpp  collision.h  physics.cpp  physics.h
src/physics/unit_test/: CMakeLists.txt  Test_collision.cpp
src/rendering/: draw.cpp  draw.h  gl_main.cpp  gl_main.h  gl_traits.h  parallel_utils.h
